--- a/style/main.css
+++ b/style/main.css
@@ -36,6 +36,21 @@ form input[type='text'] {
 .graphCanvases {
   position: relative;
 }
+.button {
+  display: inline;
+  float: left;
+  width: 50px;
+  height: 25px;
+  border: 1px solid black;
+  text-align: center;
+  margin: 5px;
+}
+#buttons {
+  left: 820px;
+  width: 250px;
+  border: 1px solid black;
+  position: absolute;
+}
 #lines {
   position: relative;
   left: 410px;
@@ -46,4 +61,13 @@ form input[type='text'] {
   height: 300px;
   left: 410px;
   overflow: scroll;
+}
+.button {
+  display: inline;
+  float: left;
+  width: 50px;
+  height: 25px;
+  border: 1px solid black;
+  text-align: center;
+  margin: 5px;
 }
