--- a/style/main.css
+++ b/style/main.css
@@ -40,13 +40,34 @@ form input[type='text'] {
   text-align: right;
   padding-right: 20px;
 }
-.graphCanvases {
+.container {
+  perspective: 800px;
   position: absolute;
   left: 300px;
 }
+.graphCanvases {
+  position: absolute;
+  left: 0;
+}
 .tablesCanvases {
   position: absolute;
-  left: 300px;
+  left: 0;
+  transform: rotateY( 180deg );
+}
+#card {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+}
+#card canvas {
+  margin: 0;
+  position: absolute;
+  /*backface-visibility: hidden;*/
+}
+#card.flipped {
+  transform: rotateY( -180deg );
 }
 .button {
   display: inline;
@@ -56,6 +77,7 @@ form input[type='text'] {
   border: 1px solid black;
   text-align: center;
   margin: 5px;
+  box-sizing: border-box;
 }
 .buttonDivider {
   width: 200px;
@@ -74,13 +96,20 @@ form input[type='text'] {
   border: 1px solid black;
   position: absolute;
 }
+#graphToggleButton {
+  width: 168px;
+  height: 25px;
+  border: 1px solid black;
+  float: left;
+  text-align: center;
+  margin: 5px;
+}
 #lines {
   position: relative;
   left: 410px;
 }
 #calculationHistory {
   padding: 0;
-
   background-color: rgb(212, 231, 252);
   border: 1px solid rgb(26, 91, 217);
   box-sizing: border-box;
