--- a/style/main.css
+++ b/style/main.css
@@ -18,7 +18,7 @@ form input[type='text'] {
   margin: 10px;
 }
 .active {
-  background-color: rgb(117, 178, 246);
+  background-color: rgb(7, 121, 246);
 }
 .outputWrapper {
   width: 290px;
@@ -49,46 +49,6 @@ form input[type='text'] {
   position: absolute;
   left: 0;
 }
-.tablesCanvases {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: rotateY( 180deg );
-}
-.tableInterface {
-  right: 0;
-  position: absolute;
-  width: 150px;
-}
-.tableButton {
-  text-align: center;
-  margin: 10px auto;
-  width: 50px;
-  height: 50px;
-  border: 1px solid black;
-}
-.tableLabel {
-  text-transform: uppercase;
-  font-family: sans-serif;
-  font-size: 24px;
-}
-.tableInputGroup {
-  box-sizing: border-box;
-  height: 85px;
-  margin: 10px 0;
-}
-.tableInterface input{
-  width: 100px;
-  right: 0;
-  font-size: 25px;
-  margin: 10px;
-  position: absolute;
-  border: 3px solid black;
-}
-.tableInterface input:focus {
-  border: 3px solid rgb(50, 99, 246);
-}
 #card {
   width: 100%;
   height: 100%;
@@ -99,134 +59,10 @@ form input[type='text'] {
 #card canvas {
   margin: 0;
   position: absolute;
-  /*backface-visibility: hidden;*/
+  backface-visibility: hidden;
 }
 #card.flipped {
   transform: rotateY( -180deg );
-}
-.button {
-  float: left;
-  width: 50px;
-  height: 25px;
-  text-align: center;
-  margin: 3px;
-  box-sizing: border-box;
-  padding: 0;
-}
-.buttonSpacer {
-  float: left;
-  width: 50px;
-  height: 25px;
-  text-align: center;
-  margin: 3px;
-  box-sizing: border-box;
-  padding: 0;
-}
-.button:hover {
-  background-color: rgb(212, 231, 252);
-}
-.buttonInline {
-  display: inline;
-}
-.separate {
-  width: 100px  ;
-  height: 100px;
-  clear:both;
-  top: 20px;
-  left: 35px;
-  display: block;
-  box-sizing: border-box;
-  position: relative;
-}
-.buttonDivider {
-  width: 200px;
-  height: 100%;
-  overflow: scroll;
-  float: left;
-}
-.buttonDivider img {
-  position: relative;
-}
-.buttonUp {
-  left: 32px;
-  top: 0px;
-  width: 34px;
-  height: 33px;
-  position: absolute;
-  box-sizing: border-box;
-  background-image: url("../images/dpadup.png");
-}
-.buttonUp:hover{
-  background: rgb(0, 99, 208);
-  background-image: url("../images/dpadup.png");
-}
-.buttonDown {
-  left: 32px;
-  top: 65px;
-  width: 34px;
-  height: 33px;
-  position: absolute;
-  box-sizing: border-box;
-  background-image: url("../images/dpaddown.png");
-}
-.buttonDown:hover{
-  background: rgb(0, 99, 208);
-  background-image: url("../images/dpaddown.png");
-}
-.buttonLeft {
-  left: 0;
-  top: 32px;
-  width: 33px;
-  height: 34px;
-  position: absolute;
-  box-sizing: border-box;
-  background-image: url("../images/dpadleft.png");
-}
-.buttonLeft:hover{
-  background: rgb(0, 99, 208);
-  background-image: url("../images/dpadleft.png");
-}
-.buttonRight {
-  right: 0;
-  top: 34px;
-  width: 33px;
-  height: 34px;
-  position: absolute;
-  box-sizing: border-box;
-  background-image: url("../images/dpadright.png");
-}
-.buttonRight:hover{
-  background: rgb(0, 99, 208);
-  background-image: url("../images/dpadright.png");
-}
-
-img {
-  max-width:100%;
-  max-height:100%;
-  min-height: 25px;
-  margin: 0 auto;
-  display: block;
-}
-
-#buttons {
-  box-sizing: border-box;
-  bottom: 0;
-  width: 100%;
-  height: 200px;
-  border: 1px solid black;
-  position: absolute;
-}
-#graphToggleButton {
-  width: 168px;
-  height: 25px;
-  border: 1px solid black;
-  float: left;
-  text-align: center;
-  margin: 5px;
-}
-#lines {
-  position: relative;
-  left: 410px;
 }
 #calculationHistory {
   padding: 0;
